# off-rs

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yaml
benches/: parse.rs
benches/resources/: prinston.off  wiki.off
examples/: cube.off  cube.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: try_parse.rs
src/: document.rs  geometry.rs  jonas.rs  lib.rs  mesh.rs  parser.rs
src/geometry/: color.rs  color_format.rs  mesh.rs  mod.rs  position.rs
src/parser/: color_format.rs  error.rs  iter.rs  mod.rs  options.rs  utils.rs
tests/: error.rs  off.rs  valid.rs
