[package]
name = "off-rs"
version = "0.1.0"
edition = "2021"
authors = ["Michael Lohr <michael@lohr.dev>", "Jonas Grawe"]
keywords = ["off", "3d", "format", "mesh"]
categories = ["parser", "parser-implementations"]
description = "A library for parsing .off mesh files"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/michidk/off_rs"
homepage = "https://github.com/michidk/off_rs"
exclude = ["/justfile", "/.github/", "/benches/", "/fuzz/"]

[[bench]]
name = "parse"
harness = false

[dev-dependencies]
criterion = "0.3.5"
