[package]
name = "off-rs"
version = "0.1.4"
edition = "2021"
authors = ["Michael Lohr <michael@lohr.dev>", "Jonas Grawe"]
keywords = ["off", "3d", "format", "mesh"]
categories = ["parsing", "parser-implementations"]
description = "A library for parsing .off mesh files"
documentation = "https://docs.rs/off-rs"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/michidk/off-rs"
homepage = "https://github.com/michidk/off-rs"
exclude = ["/justfile", "/.github/", "/fuzz/"]

[[bench]]
name = "parse"
harness = false

[dev-dependencies]
criterion = "0.3.5"
